I don't even know what im doing anymore

--- a/app/templates/bases/main_base.html
+++ b/app/templates/bases/main_base.html
@@ -52,6 +52,7 @@
 			<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
 				<div class="text-xs lg:flex-grow">
 					<a
+						href="{{ url_for('cmd_infos') }}"
 						class="
 							block
 							hidden
@@ -69,6 +70,7 @@
 						Features
 					</a>
 					<a
+						href="{{ url_for('dashboard') }}"
 						class="
 							block
 							hidden
@@ -221,7 +223,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="pt-3 pb-4 text-gray-200 text-center font-bold">
+			<div class="py-5 text-gray-200 text-center font-bold">
 				Made with
 				<span class="text-red-400"
 					><i title="heart favicon" class="fas fa-heart"></i
