--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,12 +1,17 @@
 {% extends "bases/main_base.html" %} {% block content %}
-<div class="font-semibold text-center text-gray-200 text-xl my-5">
-	KIGM Best Bot UwU
+<div class="text-center text-gray-200 my-5">
+	<div class="block text-6xl">OwO</div>
+	<div class="text-4xl block text-semibold">What's dis?</div>
+	<div class="block text-white" style="font-size: 16em">
+		<i class="fas fa-tools"></i>
+	</div>
+	<div class="text-xl text-gray-400">A Website's Work In Progress!</div>
 </div>
 {% endblock content %}
 
 <!--
 	TODO:
-		* Actually add stuff at the home site
+		* Properly add stuff at the home site
 		* Add dashboard & connect html to db (via async Flask and jinja)
 		* Commands Route (or bot docs both of them are hard)
 -->
