--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,12 +1,9 @@
 {% extends "bases/main_base.html" %} {% block content %}
 <div class="mt-10 text-center flex flex-col md:flex-none">
-	<div class="mt-2 font-semibold text-xl md:text-6xl text-gray-200">404</div>
-	<div class="mt-2 font-semibold text-xl md:text-6xl text-gray-200">
-		Not Found
-	</div>
-	<div class="text-md md:text-xl text-gray-300 mt-2">
-		( ͡°( ͡° ͜ʖ( ͡° ͜ʖ ͡°)ʖ ͡°) ͡°)
-	</div>
-	<div class="my-4 text-gray-400">Now that you're here, how are you?</div>
+	<div class="mt-2 font-semibold text-6xl text-gray-200">404</div>
+	<div class="mt-3 font-semibold text-6xl text-gray-200">Not Found</div>
+	<div class="my-4 text-xl text-gray-400">whaaaaatt?</div>
+	<div class="text-2xl text-gray-300 mt-2">( ͡°( ͡° ͜ʖ( ͡° ͜ʖ ͡°)ʖ ͡°) ͡°)</div>
+	<div class="my-6 text-gray-400">Now that you're here, hru?</div>
 </div>
 {% endblock content %}
