--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -1,15 +1,17 @@
 {% extends "bases/main_base.html" %} {% block content %}
 <div class="mx-3 mt-3 mb-10 grid grid-cols-1 md:grid-cols-3 gap-6">
 	{% for guild in guilds %}
-	<div class="bg-gray-700 text-center rounded">
-		<div class="mt-5 py-2">
+	<div class="bg-gray-700 flex flex-col rounded-md">
+		<div class="flex-initial mt-5 py-2">
 			<img
 				src="{{ guild.icon_url }}"
 				alt="{{ guild.name }} Avatar"
-				class="mx-auto w-32 h-32 rounded-full"
+				class="flex-initial mx-auto w-24 h-24 md:w-32 md:h-32 rounded-full"
 			/>
 		</div>
-		<div class="my-4 text-gray-200">{{ guild.name }}</div>
+		<div class="flex-initial my-4 text-center text-gray-200">
+			{{ guild.name }}
+		</div>
 	</div>
 	{% endfor %}
 </div>
