added arc.io widget

--- a/api/templates/bases/main_base.html
+++ b/api/templates/bases/main_base.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{{ title }} | KIGM</title>
+		<script async src="https://arc.io/widget.min.js#GLrxM7BK"></script>
 		<script
 			src="https://kit.fontawesome.com/2bc3e593f4.js"
 			crossorigin="anonymous"
